# thesis

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cache.py  cache.sh  compress.py  compress_table.csv  conda_env.txt  gen.py  gpu_xfer_sliding.cpp  load.py  load_ext.py  microbench_pipeline.sh  p99.sh  pipeline.sh  pytest.ini  requirements.txt  run.sh  set_perf.sh  simulated_pipeline.sh  throughput.sh
benchmark/: .gitignore  L1_large_node_classification.py  bench_pipeline.py  g_copy_mem_usage.py  gat_exec.py  gcn_benchmark.py  gcn_sample_train_ex.py  infer_baseline.py  infer_cache.py  multi_process.py  papers_mem_test.py  papers_test.py  pipeline_microbench.py  pipeline_test.py  profiled_infer_baseline.py  profiled_timer.py  shm.py  subset_analysis.py  torch_multiprocess.py  torch_tensor_exp.py
benchmark/pinned_mem/: README.md  pin_test.py
fast_inference/: dataloader.py  dataset.py  device_cache.py  feat_server.py  inference_engine.py  message.py  request_generator.py  rwlock.py  sampler.py  timer.py  util.py
fast_inference/benchmark/: cache.py
fast_inference/models/: factory.py  gat.py  gcn.py  sage.py
fast_inference/pipeline/: pipeline.py  pipeline_worker.py
graphs/: cache_speedup.py  conflict.py  generate_latency_breakdown.py  hit_rate_over_time.py  latency_over_time.py  multi_compare.py  p99.py  throughput.py  util.py  verify_req_subgraph_dist.py
include/: cache_manager.hpp  shm.hpp
src/: cache_manager.cpp  cpp_test.cpp  fast_inference.cpp  ipc_test.cpp  mask_tester.cpp  pybind_test.cpp
tests/fast_inference/: test_cache_manager.py  test_dataset.py  test_feat_server.py  test_multi_process.py  test_pipeline.py
